--- a/index.html
+++ b/index.html
@@ -11,20 +11,91 @@
 
 <body>
     <div id="app">
+        <div id="top_bar">
+            <span><svg viewBox="0 0 1024 1024" fill="#0878F0" width="30" height="30">
+                    <path
+                        d="M435.8 512L690 258c18.8-18.8 18.8-49.2 0-67.8-18.8-18.8-49.2-18.6-68 0L334 478c-18.2 18.2-18.6 47.4-1.4 66.2L621.8 834c9.4 9.4 21.8 14 34 14s24.6-4.6 34-14c18.8-18.8 18.8-49.2 0-67.8L435.8 512z">
+                    </path>
+                </svg>主页面</span>
+            <span><svg viewBox="0 0 1024 1024" width="30" height="30">
+                    <path
+                        d="M512 42.666667a469.333333 469.333333 0 1 0 469.333333 469.333333A469.333333 469.333333 0 0 0 512 42.666667z m0 864a394.666667 394.666667 0 1 1 394.666667-394.666667 395.146667 395.146667 0 0 1-394.666667 394.666667z"
+                        fill="#0878F0"></path>
+                    <path
+                        d="M304.906667 512m-66.666667 0a66.666667 66.666667 0 1 0 133.333333 0 66.666667 66.666667 0 1 0-133.333333 0Z"
+                        fill="#0878F0"></path>
+                    <path
+                        d="M512 512m-66.666667 0a66.666667 66.666667 0 1 0 133.333334 0 66.666667 66.666667 0 1 0-133.333334 0Z"
+                        fill="#0878F0"></path>
+                    <path
+                        d="M719.093333 512m-66.666666 0a66.666667 66.666667 0 1 0 133.333333 0 66.666667 66.666667 0 1 0-133.333333 0Z"
+                        fill="#0878F0"></path>
+                </svg></span>
+        </div>
         <div id="calc_top">
             {{formula}}
         </div>
         <div id="calc_body">
-            <div v-for="(item,idx) in operations" @click=""
+            <div v-for="(item,idx) in operations" @click="handleOperationClick" :data-id="item"
                 :class="{'br':idx%4<3,'bt':idx>=4,'del':idx==3,'divide':item=='÷','multiply':item=='*'}">
-                {{item}}</div>
+                <template v-if="item=='del'"><svg viewBox="0 0 1024 1024" id="mx_n_1721557437035" width="30"
+                        height="30">
+                        <path
+                            d="M867 192H334.4c-24.4 0-43.6 12.4-56.4 31.2L86 512l192 288.4c12.8 18.8 32 31.6 56.4 31.6h532.4c39 0 71-32 71-71.2V263.2C938 224 906 192 867 192z m-106.6 447.6l-50 50.2-127.4-127.6-127.4 127.6-50-50.2 127.4-127.6-127.4-127.6 50-50.2 127.4 127.6 127.4-127.6 50 50.2-127.4 127.6 127.4 127.6z"
+                            p-id="1602" fill="#ffffff"></path>
+                    </svg></template>
+                <template v-else-if="item=='plus'"><svg viewBox="0 0 1024 1024" width="30" height="30">
+                        <path
+                            d="M740.828151 485.179145 538.820344 485.179145 538.820344 283.185664c0-14.81645-11.989055-26.820855-26.820855-26.820855-14.769378 0-26.790156 12.004405-26.790156 26.820855l-0.013303 201.99348L283.200502 485.179145c-14.801101 0-26.820855 12.019755-26.820855 26.820855 0 14.81645 12.019755 26.819832 26.820855 26.819832l201.991434 0-0.013303 201.994504c0 14.800078 12.051477 26.821879 26.820855 26.821879 14.8318 0 26.820855-12.021801 26.820855-26.821879L538.820344 538.819832l201.979154 0c14.8318 0 26.820855-12.003382 26.820855-26.819832S755.631298 485.179145 740.828151 485.179145z"
+                            fill="#000000"></path>
+                    </svg></template>
+                <template v-else-if="item=='minus'"><svg viewBox="0 0 1024 1024" width="26" height="26">
+                        <path
+                            d="M768.440022 485.814618c0 14.475689-11.743462 26.185382-26.200732 26.185382l-460.467323 0c-14.458293 0-26.167986-11.70867-26.167986-26.185382l0 0c0-14.458293 11.70867-26.183336 26.167986-26.183336l460.467323 0C756.697583 459.631282 768.440022 471.356324 768.440022 485.814618L768.440022 485.814618z"
+                            fill="#000000"></path>
+                    </svg></template>
+                <template v-else-if="item=='multiply'"><svg viewBox="0 0 1024 1024" width="30" height="30">
+                        <path
+                            d="M557.2 512l136.4-136.4c12.4-12.4 12.4-32.8 0-45.2-12.4-12.4-32.8-12.4-45.2 0L512 466.8l-136.4-136.4c-12.4-12.4-32.8-12.4-45.2 0-6.2 6.2-9.4 14.4-9.4 22.6 0 8.2 3.2 16.4 9.4 22.6l136.4 136.4-136.4 136.4c-6.2 6.2-9.4 14.4-9.4 22.6 0 8.2 3.2 16.4 9.4 22.6 12.4 12.4 32.8 12.4 45.2 0l136.4-136.4 136.4 136.4c12.4 12.4 32.8 12.4 45.2 0 12.4-12.4 12.4-32.8 0-45.2L557.2 512z"
+                            fill="#000000"></path>
+                    </svg></template>
+                <template v-else-if="item=='divide'"><svg viewBox="0 0 1024 1024" width="24" height="24">
+                        <path
+                            d="M213.333333 469.333333h597.333334v85.333334H213.333333v-85.333334z m298.666667-128a64 64 0 1 1 0-128 64 64 0 0 1 0 128z m0 469.333334a64 64 0 1 1 0-128 64 64 0 0 1 0 128z"
+                            fill="#000000"></path>
+                    </svg></template>
+                <template v-else-if="item=='equal'"><svg viewBox="0 0 1024 1024" width="24" height="24">
+                        <path
+                            d="M800 640a32 32 0 1 1 0 64h-576a32 32 0 1 1 0-64h576z m0-320a32 32 0 1 1 0 64h-576a32 32 0 0 1 0-64h576z"
+                            fill="#000000"></path>
+                    </svg></template>
+                <template v-else>{{item}}</template>
+            </div>
         </div>
     </div>
 </body>
 <script>
     PetiteVue.createApp({
         formula: '',
-        operations: ['C', '1', '1', '⨉', '1', '2', '3', '+', '4', '5', '6', '-', '7', '8', '9', '*', '.', '0', '=', '÷']
+        operations: ['C', '1', '1', 'del', '1', '2', '3', 'plus', '4', '5', '6', 'minus', '7', '8', '9', 'multiply', '.', '0', 'equal', 'divide'],
+        handleOperationClick(e) {
+            let operation = e.currentTarget.dataset.id
+            let { formula } = this
+            if ('0123456789.'.includes(operation)) {
+                if (formula.includes('.') && operation == '.') return
+                this.formula = formula + operation
+            } else if (operation == 'del') {
+                if (formula.length > 0) this.formula = formula.substr(0, formula.length - 1)
+            } else if (['plus', 'minus', 'multiply', 'divide'].includes(operation)) {
+                this.formula=formula+['+','-','*','/'][['plus', 'minus', 'multiply', 'divide'].indexOf(operation)]
+            }else if(operation=='equal'){
+                try {
+                    this.formula = formula+`=${eval(formula)}`
+                } catch (error) {
+                    console.log('invalid');
+                }
+            }
+        }
     }).mount("#app")
 </script>
 
