--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <script>
     PetiteVue.createApp({
         formula: '',
-        operations: ['C1', '1', '1', 'del', '1', '2', '3', 'plus', '4', '5', '6', 'minus', '7', '8', '9', 'multiply', '.', '0', 'equal', 'divide'],
+        operations: ['C', '1', '1', 'del', '1', '2', '3', 'plus', '4', '5', '6', 'minus', '7', '8', '9', 'multiply', '.', '0', 'equal', 'divide'],
         handleOperationClick(e) {
             let operation = e.currentTarget.dataset.id
             let { formula } = this
