--- a/index.html
+++ b/index.html
@@ -28,30 +28,27 @@
                 </svg></span>
         </div>
         <div id="calc_top">
-            {{formula}}
+            {{input_number}}
         </div>
         <div id="calc_body">
-            <div v-for="(item,idx) in operations" @click="handleOperationClick" :data-id="item"
+            <div v-for="(item,idx) in operations" @click="handleOperationClick" :data-id=item
                 :class="{'br':idx%3<2,'bt':idx>=3}">{{item}}</div>
         </div>
     </div>
 </body>
 <script>
     PetiteVue.createApp({
-        formula: '',
-        operations: ['X', 'X', 'del', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '0', '确定'],
+        input_number: '',
+        operations: ['', '', 'x', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '0', 'ok'],
         handleOperationClick(e) {
             let operation = e.currentTarget.dataset.id
-            let { formula } = this
-            if ('0123456789.'.includes(operation)) {
-                if (formula.includes('.') && operation == '.') return
-                this.formula = formula + operation
+            let { input_number } = this
+            if (!isNaN(Number(operation, 10))) {
+                this.input_number = input_number + operation
+            } else if(operation=='.' && input_number.length>0 && !input_number.includes('.')){
+                this.input_number = input_number + operation
             } else if (operation == '确定') {
-                try {
-                    this.formula = formula + `=${eval(formula)}`
-                } catch (error) {
-                    console.log('invalid');
-                }
+                
             }
         }
     }).mount("#app")
