--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div id="calc_top">
             {{input_number}}
         </div>
+        <div>{{time}}</div>
         <div id="calc_body">
             <div v-for="(item,idx) in operations" @click="handleOperationClick" :data-id=item
                 :class="{'br':idx%3<2,'bt':idx>=3}">{{item}}</div>
@@ -39,16 +40,18 @@
 <script>
     PetiteVue.createApp({
         input_number: '',
+        time: '',
         operations: ['', '', 'x', '1', '2', '3', '4', '5', '6', '7', '8', '9', '.', '0', 'ok'],
         handleOperationClick(e) {
+            this.time = new Date().getTime()
             let operation = e.currentTarget.dataset.id
             let { input_number } = this
             if (!isNaN(Number(operation, 10))) {
                 this.input_number = input_number + operation
-            } else if(operation=='.' && input_number.length>0 && !input_number.includes('.')){
+            } else if (operation == '.' && input_number.length > 0 && !input_number.includes('.')) {
                 this.input_number = input_number + operation
             } else if (operation == '确定') {
-                
+
             }
         }
     }).mount("#app")
